# Bulle

./: .env  main.py  pyproject.toml  reset_db.py
api/v1/: completions.py  routines.py  users.py
app/: main.py
models/: __init__.py  completion.py  routine.py  user.py
schemas/: completion.py  routine.py  user.py
