# filepath: c:\Users\guigu\Desktop\Bulle\backend\pyproject.toml
[project]
name = "bulle-backend"
version = "0.1.0"
description = "Bulle FastAPI Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
